procore_logs/call_logs/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-logs-backend
  labels:
    app: call-logs
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: call-logs
      tier: backend
  template:
    metadata:
      labels:
        app: call-logs
        tier: backend
    spec:
      containers:
      - name: call-logs-backend
        image: gajare147/call-logs-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
