procore_logs/call_logs/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: call-logs-frontend
spec:
  selector:
    app: call-logs
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
